# minibatch-kmeans

./: .gitignore  README.md  pyproject.toml
.github/workflows/: pages.yml  publish.yml
evaluation/: README.md  __init__.py  __main__.py  data.py  datasets.py  heuristics.py  metrics.py  nvitop_process_memory.py  perf_test.py  presets.py  run.py
evaluation/backends/: __init__.py  faiss_backend.py  fast_kmeans.py  flash_kmeans.py  methods.py  minibatch_kmeans.py  sklearn_backend.py  timing.py
notebooks/: partial_fit_demo.ipynb
pdoc_templates/: module.html.jinja2
scripts/: gen_api_docs.sh  profile_nsys.sh  setup_eval.sh
src/minibatch_kmeans/: __init__.py  _core.py  _utils.py
tests/: test_benchmark_data.py  test_metrics.py  test_minibatch_kmeans_io.py
