[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "minibatch-kmeans"
version = "0.1.1"
description = "Mini-batch k-means clustering implemented in PyTorch"
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
authors = [{ name = "Miroojin Bakshi" }]
keywords = ["k-means", "clustering", "pytorch", "minibatch", "machine-learning"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "scikit-learn>=1.3",
    "torch>=2.0",
    "tqdm>=4.66",
]

[project.urls]
Homepage = "https://github.com/mb-14/minibatch-kmeans"
Documentation = "https://mb-14.github.io/minibatch-kmeans/"
Repository = "https://github.com/mb-14/minibatch-kmeans"
Issues = "https://github.com/mb-14/minibatch-kmeans/issues"

[project.optional-dependencies]
dev = ["pdoc>=14"]
eval = [
    "clustering-benchmarks>=1.1",
    "fastkmeans>=0.5.0",
    "flash-kmeans>=0.2.0",
    "matplotlib>=3.8",
    "nvitop>=1.4",
]

[tool.setuptools.packages.find]
where = ["src", "."]
include = ["minibatch_kmeans", "evaluation"]
